IngressB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serviceb
  namespace: serviceb
spec:
  ingressClassName: nginx
  rules:
  - host: azbastion.cloud
    http:
      paths:
      - backend:
          service:
            name: service-b
            port:
              number: 8080
        path: /health
        pathType: Prefix
