ingressA.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoin
  namespace: servicea
spec:
  ingressClassName: nginx
  rules:
  - host: azbastion.cloud
    http:
      paths:
      - backend:
          service:
            name: service-a
            port:
              number: 8080
        path: /
        pathType: Prefix
